fix(post text editor): text editor now stretches to the bottom of the page to maximize space usage

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,3 +25,11 @@
     border-top: 1px solid rgba(145, 142, 142, 0.67);;
     min-width: 350px;
 }
+
+.home-layout-body {
+    min-height: calc(100vh - 76px - 65px);
+    
+    @media screen and (min-width: 576px) {
+        min-height: calc(100vh - 76px);
+    }
+}
