--- a/client/src/components/TextEditor/RichTextEditor.scss
+++ b/client/src/components/TextEditor/RichTextEditor.scss
@@ -1,6 +1,7 @@
 /* Set height for quill */
 .rich-text-editor {
     position: relative;
+    min-height: 300px;
 
     .ql-container {
         position: relative;
